--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* ================================= 
+/* =================================
   Main Elements
 ==================================== */
 
@@ -77,7 +77,7 @@ input:focus, select:focus, textarea:focus, button:focus{
   background:yellow;
 }
 
-/* ================================= 
+/* =================================
   Main Classes
 ==================================== */
 
@@ -101,16 +101,16 @@ input:focus, select:focus, textarea:focus, button:focus{
 /* ---- Media Queries ---- */
 
 @media screen and (min-width: 768px) {
-  
-/* ================================= 
+
+/* =================================
   Main Elements
 ==================================== */
-  
+
 hr {
   max-width:420px;
   text-align:center;
 }
-  
+
 fieldset {
   width:400px;
 }
@@ -122,12 +122,12 @@ input[type="text"],input[type="email"],select {
 input[type="number"] {
   width:30%;
 }
-  
+
 p {
   max-width:400px;
 }
-  
-/* ================================= 
+
+/* =================================
   Main Classes
 ==================================== */
 
@@ -141,7 +141,7 @@ p {
   flex-direction:column;
   margin-bottom:35px;
 }
-  
+
 .container label {
     flex-basis: 150px;
 }
@@ -156,15 +156,24 @@ p {
   padding-left:5px;
   margin-right:-10px;
 }
-  
+
 .zip {
   display:flex;
   justify-content:flex-start;
   padding-left:5px;
   padding-right:-15px;
 }
-  
+
 input[type="number"] {
   margin-right:150px;
-}  
 }
+}
+
+@media screen and (min-width: 1024px) {
+
+.title {
+  width: 30%;
+  margin: auto;
+}
+}
+
